tests/negative/test_var_unknown.orb
fnc main() {
    let i32 x = 5+y;
}